texi2html/test/invalid/res_info/texi_multitable_too_much_col/multitable_too_much_col.passtexi
multitable_too_much_col.texi(,2) 
multitable_too_much_col.texi(,3) @node Top
multitable_too_much_col.texi(,4) @top test multitable with too much cells
multitable_too_much_col.texi(,5) 
multitable_too_much_col.texi(,6) 
multitable_too_much_col.texi(,7) @multitable
multitable_too_much_col.texi(,8) @item item in empty multitable @tab tab in empty m @tab second tab in empty m
multitable_too_much_col.texi(,9) @item item in empty m
multitable_too_much_col.texi(,10) @end multitable
multitable_too_much_col.texi(,11) 
multitable_too_much_col.texi(,12) @multitable {a}
multitable_too_much_col.texi(,13) @item a @tab additional tab @tab other additional tab @tab 3rd  additiona tab
multitable_too_much_col.texi(,14) @item a1
multitable_too_much_col.texi(,15) @item a2 @tab additional tab2 @tab other additional tab2 @tab 3rd  additional tab2
multitable_too_much_col.texi(,16) @item a3 @tab one additional tab
multitable_too_much_col.texi(,17) @end multitable
multitable_too_much_col.texi(,18) 
multitable_too_much_col.texi(,19) @multitable @columnfractions 0.4 0.6
multitable_too_much_col.texi(,20) @item first @tab second @tab first out @tab second out @tab third out
multitable_too_much_col.texi(,21) @item first1 
multitable_too_much_col.texi(,22) @item first2 @tab second2 @tab first2 out
multitable_too_much_col.texi(,23) @end multitable
multitable_too_much_col.texi(,24) 
multitable_too_much_col.texi(,25) @bye
